--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ qtpng = ["pyqtwebengine>=5.15"]
 qtpdf = ["nbconvert[qtpng]"]
 webpdf = ["playwright"]
 test = [
-    "pytest",
+    "pytest>=7,<8",
     "ipykernel",
     "ipywidgets>=7.5",
     "flaky",
