--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ urls = {Homepage = "https://jupyter.org"}
 requires-python = ">=3.8"
 dependencies = [
     "beautifulsoup4>=4.12.1",
-    "bleach!=5.0.0",
+    "bleach>=6.1",
     "defusedxml>=0.7.1",
     "importlib_metadata>=3.6;python_version<\"3.10\"",
     "jinja2>=3.0",
