--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,7 +97,9 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - uses: jupyterlab/maintainer-tools/.github/actions/check-links@v1
         with:
-          ignore_links: "https://ipywidgets.readthedocs.io/en/latest/examples/Output"
+          ignore_links:
+            ^https://ipywidgets.readthedocs.io/en/latest/examples/Output
+            ^https://nbviewer.jupyter.org
 
   test_minimum_versions:
     name: Test Minimum Versions
