--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ test = [
 serve = ["tornado>=6.1"]
 docs = [
     "myst_parser",
-    "sphinx==5.0.2",
+    "sphinx>=5.0.2",
     "pydata_sphinx_theme",
     "nbsphinx>=0.2.12",
     "ipython",
