--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,12 +47,22 @@ jobs:
       - name: Run tests on Linux
         if: ${{ startsWith(runner.os, 'linux') }}
         run: |
-          xvfb-run --auto-servernum hatch run cov:test
+          if [[ "${{ matrix.python-version }}" = *t ]]; then
+            target="cov:test"
+          else
+            target="test:test"
+          fi
+          xvfb-run --auto-servernum hatch run $target
 
       - name: Run tests on other platforms
         if: ${{ !startsWith(runner.os, 'linux')  }}
         run: |
-          hatch run cov:nowarn
+          if [[ "${{ matrix.python-version }}" = *t ]]; then
+            target="cov:nowarn"
+          else
+            target="test:nowarn"
+          fi
+          hatch run $target
 
       - uses: jupyterlab/maintainer-tools/.github/actions/upload-coverage@v1
 
